# odoopilot

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING-OCA.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  fly.toml  pyproject.toml
.github/: CODEOWNERS  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pr-triage.yml
docs/: adding-a-tool.md  adding-an-llm-provider.md  architecture.md  deployment.md
examples/: docker-compose.yml
mail_gateway_ai/: README.md  __manifest__.py
mail_gateway_ai/controllers/: main.py
mail_gateway_ai/data/: ir_cron.xml
mail_gateway_ai/models/: __init__.py  mail_gateway_ai_audit.py  mail_gateway_ai_identity.py  mail_gateway_ai_session.py  res_config_settings.py
mail_gateway_ai/readme/: INSTALL.md
mail_gateway_ai/security/: ir.model.access.csv
mail_gateway_ai/services/: agent.py  llm.py  tools.py
mail_gateway_ai/static/description/: index.html
mail_gateway_ai/views/: link_pages.xml  mail_gateway_ai_audit_views.xml  mail_gateway_ai_identity_views.xml  res_config_settings_views.xml
odoo_addon/mail_gateway_ai/: README.md  __manifest__.py
odoo_addon/mail_gateway_ai/models/: __init__.py  mail_gateway_ai_identity.py
odoo_addon/mail_gateway_ai/readme/: CHANGELOG.md  CONFIGURE.md  CONTRIBUTORS.md  DESCRIPTION.md  INSTALL.md
odoo_addon/mail_gateway_ai/security/: ir.model.access.csv
odoo_addon/mail_gateway_ai/static/description/: index.html
odoopilot/: README.md  __init__.py  __manifest__.py  config.py  main.py
odoopilot/agent/: core.py
odoopilot/agent/providers/: __init__.py  anthropic.py  base.py  groq.py  ollama.py  openai.py
odoopilot/agent/tools/: __init__.py  accounting.py  base.py  crm.py  helpdesk.py  hr.py  inventory.py  project.py  purchase.py  sales.py
odoopilot/audit/: log.py
odoopilot/channels/: base.py  telegram.py  whatsapp.py
odoopilot/controllers/: main.py
odoopilot/data/: ir_cron.xml
odoopilot/identity/: linking.py  permissions.py
odoopilot/migrations/17.0.7.0.0/: post-migration.py
odoopilot/models/: __init__.py  odoopilot_audit.py  odoopilot_delivery.py  odoopilot_identity.py  odoopilot_link_token.py  odoopilot_session.py  res_config_settings.py
odoopilot/odoo/: client.py  models.py
odoopilot/readme/: CHANGELOG.md  CONFIGURE.md  CONFIGURE.rst  CONTRIBUTORS.md  CONTRIBUTORS.rst  CREDITS.rst  DESCRIPTION.md  DESCRIPTION.rst  INSTALL.md  INSTALL.rst  MAINTAINERS.rst  ROADMAP.rst  USAGE.rst
odoopilot/security/: ir.model.access.csv
odoopilot/services/: __init__.py  agent.py  llm.py  notifications.py  scope_guard.py  stt.py  telegram.py  throttle.py  tools.py  web_chat.py  whatsapp.py
odoopilot/static/description/: banner_source.html  index.html
odoopilot/static/src/components/: web_chat.js  web_chat.xml
odoopilot/static/src/scss/: web_chat.scss
odoopilot/storage/: db.py  models.py
odoopilot/tests/: __init__.py  test_admin_views.py  test_employee_tools.py  test_scope_guard.py  test_security.py  test_voice.py  test_web_chat.py
odoopilot/views/: link_pages.xml  odoopilot_audit_views.xml  odoopilot_identity_views.xml  res_config_settings_views.xml
scripts/: check_listing_rendering.py  render_banner.py
tests/: conftest.py  test_agent_core.py
tests/test_providers/: test_anthropic.py  test_openai.py
tests/test_tools/: test_crm.py  test_hr.py  test_inventory.py  test_project.py  test_sales.py
