[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odoopilot"
version = "0.1.0"
description = "AI-powered messaging bridge for Odoo Community — Telegram & WhatsApp via any LLM"
readme = "README.md"
license = { text = "LGPL-3.0-or-later" }
requires-python = ">=3.11"
authors = [{ name = "OdooPilot Contributors" }]
keywords = ["odoo", "telegram", "whatsapp", "ai", "erp", "chatbot", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-telegram-bot>=21.0",
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "httpx>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
postgres = [
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.1.0",
]

[project.scripts]
odoopilot = "odoopilot.main:app"

[project.urls]
Homepage = "https://github.com/arunrajiah/odoopilot"
Repository = "https://github.com/arunrajiah/odoopilot"
"Bug Tracker" = "https://github.com/arunrajiah/odoopilot/issues"
"GitHub Sponsors" = "https://github.com/sponsors/arunrajiah"

# ---------------------------------------------------------------------------
# Hatchling
# ---------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["odoopilot"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["mail_gateway_ai"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # do not perform function calls in argument defaults (FastAPI pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert in tests

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
files = ["odoopilot"]

[[tool.mypy.overrides]]
module = "odoopilot.agent.tools.*"
disable_error_code = ["override"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=odoopilot --cov-report=term-missing --cov-fail-under=60"

[tool.coverage.run]
source = ["odoopilot"]
omit = ["odoopilot/main.py"]  # FastAPI startup is integration-tested via docker-compose
